--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -723,11 +723,12 @@ body {
       .txt-fitness {
         text-align: left;
         position: absolute;
-        margin-top: 540px;
+        margin-top: 688px;
         margin-left: 13%;
         font-family: SFProText-Medium;
         font-size: 25px;
         color: white;
+        letter-spacing: 2px;
       }
       // .fitness {
       //   width: 100%;
