--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -3090,6 +3090,18 @@ body {
   }
 }
 
+@media screen and (max-width: 1440px) {
+
+  .perkfix-home3 {
+    .content4 {
+      // padding-left: 0px !important;
+      .txt-fitness {
+        margin-top: 500px !important;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1368px) {
   .perkfix-home2 {
     display: block !important;
