--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -545,6 +545,77 @@ body {
     }
   }
 
+  .contact-content {
+    width: 960px;
+    margin : 30px auto 30px auto;
+    p {
+      font-size : 1.5em;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    .top-part {
+      text-align: center;
+      margin: auto;
+      padding: 15px 0px;
+      border: 1px solid rgba(97, 97, 97, 1);
+      width: 480px;
+      font-size: 1.3em;
+      color: rgba(97, 97, 97, 1);
+    }
+    .content {
+      label {
+        font-size: 1.4em;
+        font-weight: bold;
+        display: inline-block;
+        width: 25%;
+        vertical-align: top;
+        margin-top: 2%;
+      }
+      input[type=text] {
+        text-align: center;
+        border-radius: 10px;
+        font-size: 1rem;
+        height: 2.5em;
+        margin: 1% 0;
+      }
+      .col-one {
+        width: 30%;
+      }
+      .col-two {
+        width: 61%;
+      }
+      textarea {
+        text-align: left;
+        border-radius: 10px;
+        font-size: 1rem;
+        width: 72%;
+        min-height: 300px;
+        height: 2.5em;
+        margin: 1% 0;
+      }
+      span.red {
+        color: red;
+      }
+      button {
+        font-size: 1.5em;
+        font-weight: bold;
+        border-radius: 8px;
+      }
+      .button-cancel {
+        padding: 12px 15px;
+      }
+      .button-send {
+        padding: 12px 27px;
+        font-size: 1.5em;
+        margin-left: 7px;
+        text-align: right; 
+        margin-right: 2%;
+        color: rgba(0, 145, 255, 1);
+      }
+    } 
+  }
+
   .perkfix-home1 {
     width: 100%;
     h1 {
