--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -519,7 +519,7 @@ body .get-started .get-started-page .content .submit-btn {
   font-size: 16px;
 }
 body .contact-content {
-  width: 960px;
+  max-width: 960px;
   margin: 30px auto 30px auto;
 }
 body .contact-content p {
@@ -533,7 +533,7 @@ body .contact-content .top-part {
   margin: auto;
   padding: 15px 0px;
   border: 1px solid #616161;
-  width: 480px;
+  max-width: 480px;
   font-size: 1.3em;
   color: #616161;
 }
