--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -443,6 +443,60 @@ body .auth .auth-page a {
   font-family: SFProText-Regular;
   color: #009cff;
 }
+body .content-thanks .input-content {
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  margin: 4px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  height: 60px;
+  max-width: 374px;
+  background-color: rgba(216, 216, 216, 0.32);
+  border: 1px solid #979797;
+  justify-content: center;
+}
+body .content-thanks .flag {
+  margin: 7px;
+}
+body .content-thanks .input-content span {
+  margin: 2px;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+body .content-thanks .input-content input {
+  border: 1px solid transparent;
+  font-size: 1.5rem;
+  max-width: 255px;
+  background: transparent;
+}
+body .content-thanks .input-content input::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+body .content-thanks .input-content input:active {
+  border: 1px solid transparent;
+}
+body .content-thanks .input-content input:focus {
+  border: 1px solid transparent;
+  outline: none;
+}
+body .content-thanks .call-content {
+  margin: 4px;
+}
+body .content-thanks .call {
+  display: block;
+  border-radius: 5px;
+  margin-left: 8px;
+  padding: 18px 10px;
+  max-width: 158px;
+  font-size: 1.5rem;
+  color: white;
+  background-color: #00c888;
+  cursor: pointer;
+}
+body .content-thanks .reference-content {
+  margin-top: 24px;
+}
 body .get-started {
   height: 100vh;
   background-color: black;
@@ -521,12 +575,16 @@ body .get-started .get-started-page .content .submit-btn {
 body .contact-content {
   max-width: 960px;
   margin: 30px auto 30px auto;
+  padding: 0px 20px;
+  font-family: SFProText-Light;
 }
 body .contact-content p {
-  font-size: 1.5em;
+  font-size: 1.2em;
+  font-family: SFProText-Light;
 }
 body .contact-content h1 {
-  font-size: 3em;
+  font-size: 2.4em;
+  font-family: SFProText-Bold;
 }
 body .contact-content .top-part {
   text-align: center;
@@ -534,7 +592,8 @@ body .contact-content .top-part {
   padding: 15px 0px;
   border: 1px solid #616161;
   max-width: 480px;
-  font-size: 1.3em;
+  font-size: 1.1em;
+  border-radius: 5px;
   color: #616161;
 }
 body .contact-content .content label {
@@ -570,10 +629,29 @@ body .contact-content .content textarea {
 body .contact-content .content span.red {
   color: red;
 }
-body .contact-content .content button {
+body .contact-content .content .myButton {
   font-size: 1.5em;
   font-weight: bold;
-  border-radius: 8px;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  background-color: #f9f9f9;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  font-family: Arial;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
+}
+body .contact-content .content .myButton:hover {
+  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  background-color: #e9e9e9;
+}
+body .contact-content .content .myButton:active {
+  position: relative;
+  top: 1px;
 }
 body .contact-content .content .button-cancel {
   padding: 12px 15px;
@@ -585,6 +663,10 @@ body .contact-content .content .button-send {
   text-align: right;
   margin-right: 2%;
   color: #0091ff;
+}
+body .contact-content a {
+  text-decoration: none;
+  text-align: center;
 }
 body .perkfix-home1 {
   width: 100%;
