--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -4863,3 +4863,181 @@ body {
     }
   }
 }
+@import "http://fonts.googleapis.com/css?family=Oxygen+Mono";
+/* Starter CSS for Menu */
+/* Custom CSS Styles */
+#cssmenu {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	width: auto;
+	background: #333333;
+	border-bottom: 4px solid #1b9bff;
+	font-family: 'Oxygen Mono', Tahoma, Arial, sans-serif;
+	font-size: 12px;
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		position: relative;
+		z-index: 597;
+		text-transform: uppercase;
+		li {
+			float: left;
+			min-height: 1px;
+			vertical-align: middle;
+			&:hover {
+				position: relative;
+				z-index: 599;
+				cursor: default;
+				>ul {
+					visibility: visible;
+				}
+				>a {
+					background: #1b9bff;
+					color: #ffffff;
+				}
+			}
+		}
+		li.hover {
+			position: relative;
+			z-index: 599;
+			cursor: default;
+		}
+		ul {
+			visibility: hidden;
+			position: absolute;
+			top: 100%;
+			left: 0;
+			z-index: 598;
+			width: 100%;
+			bottom: 0;
+			left: 0;
+			margin-top: 0;
+			border-top: 4px solid #1b9bff;
+			text-transform: none;
+			min-width: 190px;
+			li {
+				float: none;
+				font-weight: normal;
+				position: relative;
+				&:first-child {
+					>a {
+						border-top: 1px solid #0082e7;
+					}
+				}
+				&:hover {
+					>a {
+						background: #4eb1ff;
+						color: #ffffff;
+					}
+				}
+				&:last-child {
+					>a {
+						-moz-border-radius: 0 0 3px 3px;
+						-webkit-border-radius: 0 0 3px 3px;
+						border-radius: 0 0 3px 3px;
+						-moz-background-clip: padding;
+						-webkit-background-clip: padding-box;
+						background-clip: padding-box;
+						-moz-box-shadow: 0 1px 0 #1b9bff;
+						-webkit-box-shadow: 0 1px 0 #1b9bff;
+						box-shadow: 0 1px 0 #1b9bff;
+					}
+					&:hover {
+						>a {
+							-moz-border-radius: 0 0 0 3px;
+							-webkit-border-radius: 0 0 0 3px;
+							border-radius: 0 0 0 3px;
+							-moz-background-clip: padding;
+							-webkit-background-clip: padding-box;
+							background-clip: padding-box;
+						}
+					}
+				}
+			}
+			ul {
+				top: 0;
+				left: 190px;
+				width: 190px;
+				border-top: 0 none;
+			}
+			a {
+				background: #1b9bff;
+				color: #ffffff;
+				border: 1px solid #0082e7;
+				border-top: 0 none;
+				line-height: 150%;
+				padding: 16px 20px;
+				font-size: 12px;
+			}
+			li.has-sub {
+				>a {
+					&:after {
+						content: '+';
+						position: absolute;
+						top: 50%;
+						right: 15px;
+						margin-top: -8px;
+					}
+				}
+			}
+		}
+		&:after {
+			content: '';
+			display: block;
+			clear: both;
+		}
+		li.active {
+			>a {
+				background: #1b9bff;
+				color: #ffffff;
+			}
+		}
+		li.has-sub {
+			>a {
+				&:after {
+					content: '+';
+					margin-left: 5px;
+				}
+			}
+		}
+		li.last {
+			ul {
+				left: auto;
+				right: 0;
+				ul {
+					left: auto;
+					right: 99.5%;
+				}
+			}
+		}
+	}
+	li {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+	a {
+		display: block;
+		line-height: 1em;
+		text-decoration: none;
+		background: #333333;
+		color: #CBCBCB;
+		padding: 0 20px;
+	}
+	>ul {
+		*display: inline-block;
+		>li {
+			>a {
+				line-height: 48px;
+				font-size: 12px;
+			}
+		}
+	}
+	&:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+}
