--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -5,6 +5,7 @@ Description: My own theme
 Version: 0.0.1
 Tags: perkfix, perk, perks
 */
+@import "http://fonts.googleapis.com/css?family=Oxygen+Mono";
 @font-face {
   font-family: SFProDisplay-Bold;
   src: url("fonts/SFProDisplay-Bold.ttf");
@@ -4421,6 +4422,161 @@ body .footer-menu .menu-description .terms a {
   .pg-perkstore .content .ps-mobile-icon-container img {
     width: 50%;
   }
+}
+/* Starter CSS for Menu */
+/* Custom CSS Styles */
+#cssmenu {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  width: auto;
+  background: #333333;
+  border-bottom: 4px solid #1b9bff;
+  font-family: "Oxygen Mono", Tahoma, Arial, sans-serif;
+  font-size: 12px;
+}
+#cssmenu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  z-index: 597;
+  text-transform: uppercase;
+}
+#cssmenu ul li {
+  float: left;
+  min-height: 1px;
+  vertical-align: middle;
+}
+#cssmenu ul li:hover {
+  position: relative;
+  z-index: 599;
+  cursor: default;
+}
+#cssmenu ul li:hover > ul {
+  visibility: visible;
+}
+#cssmenu ul li:hover > a {
+  background: #1b9bff;
+  color: #ffffff;
+}
+#cssmenu ul li.hover {
+  position: relative;
+  z-index: 599;
+  cursor: default;
+}
+#cssmenu ul ul {
+  visibility: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 598;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  margin-top: 0;
+  border-top: 4px solid #1b9bff;
+  text-transform: none;
+  min-width: 190px;
+}
+#cssmenu ul ul li {
+  float: none;
+  font-weight: normal;
+  position: relative;
+}
+#cssmenu ul ul li:first-child > a {
+  border-top: 1px solid #0082e7;
+}
+#cssmenu ul ul li:hover > a {
+  background: #4eb1ff;
+  color: #ffffff;
+}
+#cssmenu ul ul li:last-child > a {
+  -moz-border-radius: 0 0 3px 3px;
+  -webkit-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -moz-box-shadow: 0 1px 0 #1b9bff;
+  -webkit-box-shadow: 0 1px 0 #1b9bff;
+  box-shadow: 0 1px 0 #1b9bff;
+}
+#cssmenu ul ul li:last-child:hover > a {
+  -moz-border-radius: 0 0 0 3px;
+  -webkit-border-radius: 0 0 0 3px;
+  border-radius: 0 0 0 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+#cssmenu ul ul ul {
+  top: 0;
+  left: 190px;
+  width: 190px;
+  border-top: 0 none;
+}
+#cssmenu ul ul a {
+  background: #1b9bff;
+  color: #ffffff;
+  border: 1px solid #0082e7;
+  border-top: 0 none;
+  line-height: 150%;
+  padding: 16px 20px;
+  font-size: 12px;
+}
+#cssmenu ul ul li.has-sub > a:after {
+  content: "+";
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  margin-top: -8px;
+}
+#cssmenu ul:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+#cssmenu ul li.active > a {
+  background: #1b9bff;
+  color: #ffffff;
+}
+#cssmenu ul li.has-sub > a:after {
+  content: "+";
+  margin-left: 5px;
+}
+#cssmenu ul li.last ul {
+  left: auto;
+  right: 0;
+}
+#cssmenu ul li.last ul ul {
+  left: auto;
+  right: 99.5%;
+}
+#cssmenu li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#cssmenu a {
+  display: block;
+  line-height: 1em;
+  text-decoration: none;
+  background: #333333;
+  color: #CBCBCB;
+  padding: 0 20px;
+}
+#cssmenu > ul {
+  *display: inline-block;
+}
+#cssmenu > ul > li > a {
+  line-height: 48px;
+  font-size: 12px;
+}
+#cssmenu:after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 /*# sourceMappingURL=style.css.map */
